--- a/frontend/allpack/iganze/gakondo.html
+++ b/frontend/allpack/iganze/gakondo.html
@@ -200,8 +200,7 @@
                         <img src="/frontend/allpack/iganze/gakondodata/i1.jpg" alt="Singer 1">
                         </a>
                         <div class="card-body">
-                            <h5>John Doe</h5>
-                            <p>Professional wedding singer with 10+ years of experience. Specializes in romantic ballads and classic hits.</p>
+                            <p>Traditional singer specializing in Rwandan folk music.</p>
                         </div>
                     </div>
                 </div>
@@ -212,8 +211,7 @@
                         <img src="/frontend/allpack/iganze/gakondodata/i2.jpg" alt="Singer 2">
                         </a>
                         <div class="card-body">
-                            <h5>Jane Smith</h5>
-                            <p>Versatile singer with a soulful voice. Perfect for creating a magical atmosphere at your wedding.</p>
+                            <p>Master of traditional drumming and cultural performances.</p>
                         </div>
                     </div>
                 </div>
@@ -224,8 +222,7 @@
                         <img src="/frontend/allpack/iganze/gakondodata/i3.jpg" alt="Singer 3">
                         </a>
                         <div class="card-body">
-                            <h5>Michael Johnson</h5>
-                            <p>Known for his powerful voice and energetic performances. Ideal for lively wedding celebrations.</p>
+                            <p>Renowned for soulful renditions of traditional wedding songs.</p>
                         </div>
                     </div>
                 </div>
@@ -236,8 +233,7 @@
                         <img src="/frontend/allpack/iganze/gakondodata/i4.jpg" alt="Singer 4">
                         </a>
                         <div class="card-body">
-                            <h5>Michael Johnson</h5>
-                            <p>Known for his powerful voice and energetic performances. Ideal for lively wedding celebrations.</p>
+                            <p>Expert in traditional Rwandan wedding rituals and music.</p>
                         </div>
                     </div>
                 </div>
@@ -248,8 +244,7 @@
                         <img src="/frontend/allpack/iganze/gakondodata/i5.jpg" alt="Singer 5">
                         </a>
                         <div class="card-body">
-                            <h5>Michael Johnson</h5>
-                            <p>Known for his powerful voice and energetic performances. Ideal for lively wedding celebrations.</p>
+                            <p>Known for energetic performances and cultural authenticity.</p>
                         </div>
                     </div>
                 </div>
@@ -260,8 +255,7 @@
                         <img src="/frontend/allpack/iganze/gakondodata/i6.jpg" alt="Singer 6">
                         </a>
                         <div class="card-body">
-                            <h5>Michael Johnson</h5>
-                            <p>Known for his powerful voice and energetic performances. Ideal for lively wedding celebrations.</p>
+                            <p>Specializes in traditional wedding ballads and melodies.</p>
                         </div>
                     </div>
                 </div>
@@ -272,8 +266,7 @@
                         <img src="/frontend/allpack/iganze/gakondodata/odira.jpg" alt="Singer 7">
                         </a>
                         <div class="card-body">
-                            <h5>Michael Johnson</h5>
-                            <p>Known for his powerful voice and energetic performances. Ideal for lively wedding celebrations.</p>
+                            <p>Traditional vocalist with a powerful and captivating voice.</p>
                         </div>
                     </div>
                 </div>
@@ -284,8 +277,7 @@
                         <img src="/frontend/allpack/iganze/gakondodata/Webp.net-resizeimage(18).jpg" alt="Singer 8">
                         </a>
                         <div class="card-body">
-                            <h5>Michael Johnson</h5>
-                            <p>Known for his powerful voice and energetic performances. Ideal for lively wedding celebrations.</p>
+                            <p>Performs traditional wedding songs with cultural flair.</p>
                         </div>
                     </div>
                 </div>
@@ -296,8 +288,7 @@
                             <img src="/frontend/allpack/iganze/gakondodata/aloite.jpg" alt="Singer 9">
                         </a>
                         <div class="card-body">
-                            <h5>Michael Johnson</h5>
-                            <p>Known for his powerful voice and energetic performances. Ideal for lively wedding celebrations.</p>
+                            <p>Celebrated for her elegant and traditional performances.</p>
                         </div>
                     </div>
                 </div>
@@ -308,8 +299,7 @@
                         <img src="/frontend/allpack/iganze/gakondodata/impanga.jpg" alt="Singer 10">
                         </a>
                         <div class="card-body">
-                            <h5>Michael Johnson</h5>
-                            <p>Known for his powerful voice and energetic performances. Ideal for lively wedding celebrations.</p>
+                            <p>A group known for lively traditional wedding performances.</p>
                         </div>
                     </div>
                 </div>
@@ -320,8 +310,7 @@
                         <img src="/frontend/allpack/iganze/gakondodata/francis.jpeg" alt="Singer 11">
                         </a>
                         <div class="card-body">
-                            <h5>Michael Johnson</h5>
-                            <p>Known for his powerful voice and energetic performances. Ideal for lively wedding celebrations.</p>
+                            <p>Expert in Rwandan folk songs and traditional wedding music.</p>
                         </div>
                     </div>
                 </div>
@@ -332,8 +321,7 @@
                         <img src="/frontend/allpack/iganze/gakondodata/icumu.jpg" alt="Singer 12">
                         </a>
                         <div class="card-body">
-                            <h5>Michael Johnson</h5>
-                            <p>Known for his powerful voice and energetic performances. Ideal for lively wedding celebrations.</p>
+                            <p>Traditional performers with harmonious and cultural melodies.</p>
                         </div>
                     </div>
                 </div>
