--- a/frontend/allpack/iganze/gakondo.html
+++ b/frontend/allpack/iganze/gakondo.html
@@ -184,12 +184,12 @@
         <div class="hero-content">
             <h2>Welcome to Our Wedding</h2>
             <p class="lead">Join us in celebrating our special day!</p>
-            <a href="booking.html" class="btn btn-primary">RSVP Now</a>
+            <a href="#image" class="btn btn-primary">Collection</a>
         </div>
     </section>
 
     <!-- Singers Gallery Section -->
-    <section class="singers-gallery">
+    <section class="singers-gallery" id="image">
         <div class="container">
             <h2 data-aos="fade-up">Our Wedding Singers</h2>
             <div class="row">
