--- a/frontend/allpack/sound/sound.html
+++ b/frontend/allpack/sound/sound.html
@@ -15,32 +15,110 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet" />
     <!-- AOS Animation Library -->
     <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
-    <!-- Custom CSS for Gallery -->
+    <!-- Custom CSS -->
     <style>
+        body {
+            font-family: 'Arial', sans-serif;
+        }
+        .navbar {
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        }
+        .display-4 {
+            font-weight: bold;
+            color: #2c3e50;
+        }
+        .lead {
+            color: #7f8c8d;
+        }
         .card-slider .carousel-item {
-            padding: 20px; /* Add padding around cards */
+            padding: 20px;
         }
         .card-slider .card {
             border: none;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Add shadow for depth */
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             transition: transform 0.3s ease;
+            border-radius: 10px;
+            margin: 0 10px; /* Add spacing between cards */
         }
         .card-slider .card:hover {
-            transform: scale(1.05); /* Add hover effect */
+            transform: scale(1.05);
         }
         .card-slider .card img {
-            height: 200px; /* Fixed height for images */
-            object-fit: cover; /* Ensure images cover the area */
+            height: 200px;
+            object-fit: cover;
+            border-top-left-radius: 10px;
+            border-top-right-radius: 10px;
         }
-        .card-slider .carousel-control-prev,
-        .card-slider .carousel-control-next {
-            width: 5%; /* Adjust control width */
-            background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
-            border-radius: 50%; /* Rounded controls */
+        .card-slider .card-body {
+            padding: 20px;
         }
-        .card-slider .carousel-control-prev-icon,
-        .card-slider .carousel-control-next-icon {
-            filter: invert(1); /* Make arrows white */
+        .card-slider .card-title {
+            font-size: 1.25rem;
+            font-weight: bold;
+            color: #2c3e50;
+        }
+        .card-slider .card-text {
+            color: #7f8c8d;
+        }
+        /* Custom Carousel Controls */
+        .carousel-control-prev,
+        .carousel-control-next {
+            width: 50px; /* Larger buttons */
+            height: 50px;
+            background-color: rgba(0, 0, 0, 0.7); /* Semi-transparent background */
+            border-radius: 50%; /* Rounded buttons */
+            top: 50%; /* Center vertically */
+            transform: translateY(-50%);
+            opacity: 0.8; /* Slightly transparent */
+            transition: opacity 0.3s ease;
+        }
+        .carousel-control-prev:hover,
+        .carousel-control-next:hover {
+            opacity: 1; /* Fully visible on hover */
+            background-color: rgba(0, 0, 0, 0.9); /* Darker on hover */
+        }
+        .carousel-control-prev {
+            left: -25px; /* Position outside the slider */
+        }
+        .carousel-control-next {
+            right: -25px; /* Position outside the slider */
+        }
+        .carousel-control-prev-icon,
+        .carousel-control-next-icon {
+            filter: invert(1); /* White arrows */
+            width: 30px; /* Larger icons */
+            height: 30px;
+        }
+        .btn-primary {
+            background-color: #3498db;
+            border: none;
+            padding: 10px 20px;
+            font-size: 1rem;
+            transition: background-color 0.3s ease;
+        }
+        .btn-primary:hover {
+            background-color: #2980b9;
+        }
+        footer {
+            background-color: #2c3e50;
+            color: #ecf0f1;
+        }
+        footer h5 {
+            color: #3498db;
+        }
+        footer a {
+            color: #ecf0f1;
+            text-decoration: none;
+        }
+        footer a:hover {
+            color: #3498db;
+        }
+        /* Custom Image Size */
+        .custom-image {
+            width: 300px; /* Set the width */
+            height: 200px; /* Set the height */
+            object-fit: cover; /* Ensure the image covers the area */
+            border-radius: 10px; /* Optional: Add rounded corners */
         }
     </style>
 </head>
@@ -75,7 +153,7 @@
         </div>
         <div class="row mt-5">
             <div class="col-md-6" data-aos="fade-right">
-                <img src="/frontend/allpack/sound/sounddata/sound1.jpg" alt="Sound System" class="img-fluid rounded">
+                <img src="/frontend/allpack/sound/sounddata/sound1.jpg" alt="Sound System" class="img-fluid rounded custom-image">
             </div>
             <div class="col-md-6" data-aos="fade-left" data-aos-delay="100">
                 <h2>Sound Systems</h2>
@@ -89,7 +167,7 @@
         </div>
         <div class="row mt-5">
             <div class="col-md-6 order-md-2" data-aos="fade-left">
-                <img src="/frontend/allpack/sound/sounddata/sound2.jpg" alt="Lighting Design" class="img-fluid rounded">
+                <img src="/frontend/allpack/sound/sounddata/sound2.jpg" alt="Lighting Design" class="img-fluid rounded custom-image">
             </div>
             <div class="col-md-6 order-md-1" data-aos="fade-right" data-aos-delay="100">
                 <h2>Lighting Design</h2>
@@ -119,69 +197,57 @@
                     <!-- Carousel Items -->
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <div class="row justify-content-center">
-                                <div class="col-md-4">
-                                    <div class="card">
-                                        <img src="/frontend/allpack/sound/sounddata/sound1.jpg" class="card-img-top" alt="Gallery Image 1">
-                                        <div class="card-body">
-                                            <h5 class="card-title">Wedding Sound Setup</h5>
-                                            <p class="card-text">Perfect audio for your special day.</p>
-                                        </div>
+                            <div class="d-flex justify-content-center">
+                                <div class="card">
+                                    <img src="/frontend/allpack/sound/sounddata/sound1.jpg" class="card-img-top custom-image" alt="Gallery Image 1">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Wedding Sound Setup</h5>
+                                        <p class="card-text">Perfect audio for your special day.</p>
                                     </div>
                                 </div>
-                                <div class="col-md-4">
-                                    <div class="card">
-                                        <img src="/frontend/allpack/sound/sounddata/sound2.jpg" class="card-img-top" alt="Gallery Image 2">
-                                        <div class="card-body">
-                                            <h5 class="card-title">Event Lighting Design</h5>
-                                            <p class="card-text">Creating the perfect ambiance.</p>
-                                        </div>
+                                <div class="card">
+                                    <img src="/frontend/allpack/sound/sounddata/sound2.jpg" class="card-img-top custom-image" alt="Gallery Image 2">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Event Lighting Design</h5>
+                                        <p class="card-text">Creating the perfect ambiance.</p>
                                     </div>
                                 </div>
-                                <div class="col-md-4">
-                                    <div class="card">
-                                        <img src="/frontend/allpack/sound/sounddata/sound3.jpg" class="card-img-top" alt="Gallery Image 3">
-                                        <div class="card-body">
-                                            <h5 class="card-title">Corporate Event Setup</h5>
-                                            <p class="card-text">Professional sound and lighting for corporate events.</p>
-                                        </div>
+                                <div class="card">
+                                    <img src="/frontend/allpack/sound/sounddata/sound3.jpg" class="card-img-top custom-image" alt="Gallery Image 3">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Corporate Event Setup</h5>
+                                        <p class="card-text">Professional sound and lighting for corporate events.</p>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <div class="row justify-content-center">
-                                <div class="col-md-4">
-                                    <div class="card">
-                                        <img src="/frontend/allpack/sound/sounddata/sound4.jpg" class="card-img-top" alt="Gallery Image 4">
-                                        <div class="card-body">
-                                            <h5 class="card-title">Outdoor Event Setup</h5>
-                                            <p class="card-text">Perfect sound and lighting for outdoor events.</p>
-                                        </div>
+                            <div class="d-flex justify-content-center">
+                                <div class="card">
+                                    <img src="/frontend/allpack/sound/sounddata/sound4.jpg" class="card-img-top custom-image" alt="Gallery Image 4">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Outdoor Event Setup</h5>
+                                        <p class="card-text">Perfect sound and lighting for outdoor events.</p>
                                     </div>
                                 </div>
-                                <div class="col-md-4">
-                                    <div class="card">
-                                        <img src="/frontend/allpack/sound/sounddata/sound5.jpg" class="card-img-top" alt="Gallery Image 5">
-                                        <div class="card-body">
-                                            <h5 class="card-title">Stage Lighting</h5>
-                                            <p class="card-text">Dynamic lighting for stage performances.</p>
-                                        </div>
+                                <div class="card">
+                                    <img src="/frontend/allpack/sound/sounddata/sound5.jpg" class="card-img-top custom-image" alt="Gallery Image 5">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Stage Lighting</h5>
+                                        <p class="card-text">Dynamic lighting for stage performances.</p>
                                     </div>
                                 </div>
-                                <div class="col-md-4">
-                                    <div class="card">
-                                        <img src="/frontend/allpack/sound/sounddata/sound6.jpg" class="card-img-top" alt="Gallery Image 6">
-                                        <div class="card-body">
-                                            <h5 class="card-title">Concert Setup</h5>
-                                            <p class="card-text">Professional sound and lighting for concerts.</p>
-                                        </div>
+                                <div class="card">
+                                    <img src="/frontend/allpack/sound/sounddata/sound6.jpg" class="card-img-top custom-image" alt="Gallery Image 6">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Concert Setup</h5>
+                                        <p class="card-text">Professional sound and lighting for concerts.</p>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <!-- Carousel Controls -->
+                    <!-- Custom Carousel Controls -->
                     <button class="carousel-control-prev" type="button" data-bs-target="#cardCarousel" data-bs-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Previous</span>
